logs/error.log
23/09/2015 17:19:44 flask_web.py [line:60] ERROR error
Traceback (most recent call last):
  File "/usr/local/apache/htdocs/monitor-show/main/flask_web.py", line 58, in index2
    return render_template('index.htm', images=getImage())
  File "/usr/local/apache/htdocs/monitor-show/main/flask_web.py", line 21, in getImage
    images.append(getEntryPic('cnp_web'))
  File "/usr/local/apache/htdocs/monitor-show/main/pic.py", line 125, in getEntryPic
    for i in getYWData():
  File "/usr/local/apache/htdocs/monitor-show/main/data.py", line 281, in getYWData
    log = getYWLog()
  File "/usr/local/apache/htdocs/monitor-show/main/log.py", line 189, in getYWLog
    log.append(eval(i.rstrip()))
  File "<string>", line 1
    (1518318L, u'CPS', datetime.datetime(2015, 9, 10, 14, 4, 30), datetime.datetime(2015, 9, 10, 14, 36, 30), u'MEMCACHED', 3L, u'CPS|192.168.126.151:12000', None, u'Memcached\u5185\u5b58\u5360\u7528\u7387\u8d85\u9600\u503c\u5f02\u5e38', u'\u4e3b\u673a\u540d:192.168.126.151:12000,\u5185\u5b58\u6700\u5927\u53ef\u7528:10MB,\u5185\u5b58\u5f53\u524d\u5df2\u7528:0.01MB,\u5185\u5b58\u4f7f\u7528\u7387:0.13%,\u544a\u8b66\u9600\u503c:0%,\u62e8\u6d4b\u72b6\u6001:\u62e8\u6d4b\u6210\u529f', u'init', 9L)
            ^
SyntaxError: invalid syntax
23/09/2015 17:19:44 app.py [line:1423] ERROR Exception on /index.htm [GET]
Traceback (most recent call last):
  File "/usr/local/python3.4.3/lib/python3.4/site-packages/flask/app.py", line 1817, in wsgi_app
    response = self.full_dispatch_request()
  File "/usr/local/python3.4.3/lib/python3.4/site-packages/flask/app.py", line 1478, in full_dispatch_request
    response = self.make_response(rv)
  File "/usr/local/python3.4.3/lib/python3.4/site-packages/flask/app.py", line 1566, in make_response
    raise ValueError('View function did not return a response')
ValueError: View function did not return a response
